--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "pug-lexer": "^4.1.0",
     "resolve": "^1.1.7",
     "strip-json-comments": "^2.0.1",
+    "svg-element-attributes": "^1.3.1",
     "void-elements": "^2.0.1"
   },
   "devDependencies": {
